  hypersearch (Matthieu Casanova)

- When calling "line-comment" action, if the edit mode doesn't have a line
  comment property, the lines are surrounded by range comments
  (Matthieu Casanova)

- SF Bug 1723506: Context menu key not functional on Windows
  There was no action to show the popup menu. Added one such action, and
  bound it to CONTEXT_MENU by default. (Marcelo Vanzin)

}}}
{{{ Editing

- New Edit Mode: sql-loader (David Moss)

- New edit mode: csv (jaco de groot).

- Make the auto-indent code more friendly to languages where whitespace matters
  more than usual, such as Python. A new mode property (ignoreWhitespace) was
  added, which, when false, triggers some whitespace-related indent rules. Right
  now it's tuned to Python, since I'm not familiar with other languages that
  share the same characteristics. This also fixes SF bug #1382388. There are
  some cases when some weird behavior still happens, when deep indent is
  turned on. (Marcelo Vanzin)

- Applied SF Patch #1663485: perl.xml patch for variables

- Applied SF patch #1667234: clearer comments in certain parts of perl.xml

- Change the way perl "quote operators" are matched. See SF Patch #1659666
  for discussion. The fix is twofold: first, add a new "special" value for the
  end tag in SPAN_REGEXP, "~[digit]", which tries to find the matching bracket
  of the matched reference (if can't find the matching bracket, just use the tag
  body as a literal string). Second, add a new rule that highlights everything
  as "LITERAL1", used to maintain balanced brackets, and use it to highlight
  everything inside a "q" operator. This probably needs more tweaking, i.e.,
  supporting quote operators that allow interpolation, and change the other
  operators that look like "q" (such as tr). (Marcelo Vanzin)

- Added some support to EL and better css and javascript coloration
  in jsp.xml (Matthieu Casanova)

- SF Patch #1666690: No Undo past file save option