@@ -1638,6 +1638,7 @@ options.general.sortBuffers=Sort buffer list (takes effect after restart)
 options.general.sortByName=Sort buffer list by file name, instead of path name
 options.general.newkeyhandling=Use new keyboard handling (experimental)
 options.general.encodingDetectors=Ordered list of encoding autodetector names (experimental)
+options.general.fallbackEncodings=Ordered list of fallback encoding names (experimental)
 #}}}
 
 #{{{ Abbreviations pane
